dbent-derive/tests/ui/entity_struct_unnamed_fields.stderr
error: #[derive(Entity)] can only be used on structs with named fields
 --> tests/ui/entity_struct_unnamed_fields.rs:4:12
  |
4 | struct Test(Key<Int>, String);
  |            ^^^^^^^^^^^^^^^^^^
