dbent-derive/tests/ui/entity_struct_unnamed_fields.rs
use dbent::prelude::*;

#[derive(Entity)]
struct Test(Key<Int>, String);

fn main() {}
